Remove requests thread pool